<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_action_sort_by_size"
        android:showAsAction="always"
        android:title="@string/sort"
        myapp:showAsAction="always">
        <menu>
            <group android:id="@+id/menu_group_sort" >
                <item
                    android:id="@+id/menu_sortby_name"
                    android:title="@string/sort_by_name"/>
                <item
                    android:id="@+id/menu_sortby_last_had"
                    android:title="@string/sort_by_last_had"/>
                <item
                    android:id="@+id/menu_sortby_rating"
                    android:title="@string/sort_by_rating"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_settings"
        android:showAsAction="never"
        android:title="@string/settings"
        myapp:showAsAction="never">
    </item>

</menu>