<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_default"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/fontsize_default" />

    <TextView
        android:id="@+id/text_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/text1"
        android:layout_below="@id/text1"
        android:text="@string/by"
        android:textSize="@dimen/fontsize_small" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/text_by"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:background="#B8B8B8" />

    <TextView
        android:id="@+id/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_marginLeft="@dimen/margin_default"
        android:text="@string/style"
        android:textColor="@color/secundaryText"
        android:textSize="@dimen/fontsize_small"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/label_style"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_toRightOf="@id/label_style"
        android:text="TextView"
        android:textColor="@color/secundaryText"
        android:textSize="@dimen/fontsize_small" />

    <TextView
        android:id="@+id/text_abv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/label_abv"
        android:layout_alignLeft="@id/text_style"
        android:layout_toRightOf="@id/label_abv"
        android:text="TextView"
        android:textColor="@color/secundaryText"
        android:textSize="@dimen/fontsize_small" />

    <TextView
        android:id="@+id/label_abv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_style"
        android:layout_marginLeft="@dimen/margin_default"
        android:text="@string/abv"
        android:textColor="@color/secundaryText"
        android:textSize="@dimen/fontsize_small"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label_ibu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/label_abv"
        android:layout_alignLeft="@id/label_last_had"
        android:text="@string/ibu"
        android:textColor="@color/secundaryText"
        android:textSize="@dimen/fontsize_small"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_ibu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/label_ibu"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_toRightOf="@id/label_ibu"
        android:text="TextView"
        android:textColor="@color/secundaryText"
        android:textSize="@dimen/fontsize_small" />

    <TextView
        android:id="@+id/label_your_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_abv"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_marginLeft="@dimen/margin_default"
        android:text="@string/your_rating"
        android:textColor="@color/secundaryText"
        android:textSize="@dimen/fontsize_small"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/beer_rating"
        style="@style/untappdRatingBarSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/label_your_rating"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@id/label_your_rating"
        android:isIndicator="true" />

    <TextView
        android:id="@+id/label_last_had"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/label_your_rating"
        android:layout_toLeftOf="@id/text_last_had"
        android:inputType="text"
        android:text="@string/last_had"
        android:textColor="@color/secundaryText"
        android:textSize="@dimen/fontsize_small"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_last_had"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/label_your_rating"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginRight="@dimen/margin_default"
        android:text="TextView"
        android:textColor="@color/secundaryText"
        android:textSize="@dimen/fontsize_small" />

</RelativeLayout>